<resources>
    <string name="app_name">InstagramClone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amel_mahmic">amel.mahmic</string>
    <string name="travnik_sarajevo_n22"><![CDATA[Travnik -> Sarajevo 22]]></string>
    <string name="posts">Posts</string>
    <string name="follovers">Follovers</string>
    <string name="following">Following</string>
    <string name="_20">20</string>
    <string name="_76">76</string>
    <string name="_23">23</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="todo">TODO</string>
    <string name="travnik_sarajevo_n22"><![CDATA[Travnik -> Sarajevo 22]]></string>
    <string name="travnik_sarajevo_n22"><![CDATA[Travnik -> Sarajevo 22]]></string>
    <string name="travnik_sarajevo"><![CDATA[Travnik -> Sarajevo]]></string>
    <string name="travnik_sarajevo_n22"><![CDATA[Travnik -> Sarajevo 22]]></string>
</resources>
